--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,17 +16,28 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
     - name: Build with Maven
       run: mvn -f demo2/pom.xml clean install
 
+    - name: Build & push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v6
+      with:
+        image: thirumaleshd7013/springboot-images
+        tags: v1, latest
+        registry: registry-url.io
+        dockerfile: Dockerfile
+      env:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
