--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,9 +35,9 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
         image: thirumaleshd7013/springboot-images
-        tags: v1, latest
+        tags: latest
         registry: docker.io
-        dockerfile: Dockerfile
+        dockerfile: demo2/Dockerfile
       env:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
