docker file modified

--- a/demo2/Dockerfile
+++ b/demo2/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:17
 EXPOSE 8080
+WORKDIR /demo2
 ADD target/springboot-images.jar springboot-images.jar
-ENTRYPOINT [ "java","-jar","/springboot-images.jar" ]
+ENTRYPOINT ["java", "-jar", "/app/springboot-images.jar"]
