--- a/demo2/Dockerfile
+++ b/demo2/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17
 EXPOSE 8080
-COPY /C:/Users/Sreenivas\ Bandaru/git/GithubActionsCICD1/demo2/target/springboot-images.jar
+COPY C:\Users\SreenivasBandaru\git\GithubActionsCICD1\demo2\target\springboot-images.jar springboot-images.jar
 ENTRYPOINT ["java", "-jar", "springboot-images.jar"]
