--- a/demo2/Dockerfile
+++ b/demo2/Dockerfile
@@ -1,4 +1,7 @@
 FROM openjdk:17
 EXPOSE 8080
-COPY target\springboot-images.jar springboot-images.jar
-ENTRYPOINT ["java", "-jar", "springboot-images.jar"]
+
+WORKDIR /app
+
+COPY target/springboot-images.jar /app/springboot-images.jar
+ENTRYPOINT ["java", "-jar", "/app/springboot-images.jar"]
