--- a/demo2/Dockerfile
+++ b/demo2/Dockerfile
@@ -1,7 +1,6 @@
 FROM openjdk:17
 EXPOSE 8080
 
-WORKDIR /app
 
-COPY target/springboot-images.jar /app/springboot-images.jar
-ENTRYPOINT ["java", "-jar", "/app/springboot-images.jar"]
+COPY target/springboot-images.jar /springboot-images.jar
+ENTRYPOINT ["java", "-jar", "/springboot-images.jar"]
