--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
@@ -41,33 +33,17 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-        
-  depoly:
-   needs: build
-   runs-on: [springbootinstance1]
-   steps:
-    - name: Install Docker
-      run: |
-        sudo apt-get update
-        sudo apt-get -y install docker.io
+  deploy:
+    needs: build
+    runs-on: [springbootinstance1]
+    steps:
+      - name: Install Docker
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install docker.io
 
-    - name: pull image from Docker Hub
-      run: docker pull thirumaleshd7013/springboot-images:latest
+      - name: delete old container
+        run: docker rm -f GithubActionCICD1-container
 
-    - name: delete old container
-      run: docker rm -f GithubActionCICD1-container
-
-    - name: run Docker container
-      run: docker run -d -p 8080:8080 --name GithubActionCICD1-container thirumaleshd7013/springboot-images
-      
-#  depoly:
-#   needs: build
-#   runs-on: [springbootinstance1]
-#   steps:
-#     - name: pull image from docker hub
-#       run: docker pull thirumaleshd7013/springboot-images
-#     - name: delete old container
-#       run: docker rm -f GithubActionCICD1-container
-#     - name: run docker container
-#       run: docker run -d -p 8080:8080 --name GithubActionCICD1-container thirumaleshd7013/springboot-images
-   
+      - name: run Docker container
+        run: docker run -d -p 8080:8080 --name GithubActionCICD1-container thirumaleshd7013/springboot-images:latest
