--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,5 +45,7 @@ jobs:
       - name: delete old container
         run: sudo docker rm -f GithubActionCICD1-container
 
+     
       - name: run Docker container
-        run: docker run -d -p 8080:8080 --name GithubActionCICD1-container thirumaleshd7013/springboot-images:latest
+        run: sudo docker run -d -p 8080:8080 --name GithubActionCICD1-container thirumaleshd7013/springboot-images:latest
+
