--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,15 +23,26 @@ jobs:
     - name: Build with Maven
       run: mvn -f demo2/pom.xml clean install
 
+
     - name: Build & push Docker image
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
         image: thirumaleshd7013/springboot-images
-        tags: latest
+        tags: ${{ github.sha }}
         registry: docker.io
         dockerfile: demo2/Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+
+#    - name: Build & push Docker image
+#      uses: mr-smithers-excellent/docker-build-push@v6
+#      with:
+#        image: thirumaleshd7013/springboot-images
+#        tags: latest
+#        registry: docker.io
+#        dockerfile: demo2/Dockerfile
+#        username: ${{ secrets.DOCKER_USERNAME }}
+#        password: ${{ secrets.DOCKER_PASSWORD }}
 
   deploy:
     needs: build
