--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,6 +23,8 @@ jobs:
     - name: Build with Maven
       run: mvn -f demo2/pom.xml clean install
 
+    - name: Clear Docker cache
+      run: docker builder prune -a -f
 
     - name: Build & push Docker image
       uses: mr-smithers-excellent/docker-build-push@v6
