--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,11 +42,19 @@ jobs:
     needs: build
     runs-on: [springbootinstance1]
     steps:
+#      - name: Install Docker
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get -y install docker.io
+      - name: Debugging
+        run: echo "Hello"
+
       - name: Install Docker
         run: |
-          sudo apt-get update
-          sudo apt-get -y install docker.io
-
+          echo "Installing Docker..."
+          apt-get update
+          apt-get -y install docker.io
+          echo "Docker installed."
       - name: delete old container
         run: sudo docker rm -f GithubActionCICD1-container
 
