--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,7 +40,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: [springbootinstance1]
+    runs-on: [gitactions]
     steps:
 #      - name: Install Docker
 #        run: |
