--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,19 +42,11 @@ jobs:
     needs: build
     runs-on: [gitactions]
     steps:
-#      - name: Install Docker
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get -y install docker.io
-      - name: Debugging
-        run: echo "Hello"
-
       - name: Install Docker
         run: |
-          echo "Installing Docker..."
-          apt-get update
-          apt-get -y install docker.io
-          echo "Docker installed."
+          sudo apt-get update
+          sudo apt-get -y install docker.io
+  
       - name: delete old container
         run: sudo docker rm -f GithubActionCICD1-container
 
